Updated portfolio details

--- a/templates/pricefy.html
+++ b/templates/pricefy.html
@@ -74,8 +74,8 @@
                 <li><strong>Project date</strong>: 04 April, 2022</li>
                 <li>
                   <strong>Project URL</strong>:
-                  <a href="https://pricefy.herokuapp.com/" target="_blank">
-                    https://pricefy.herokuapp.com/
+                  <a href="https://pricefy.onrender.com/" target="_blank">
+                    https://pricefy.onrender.com/
                   </a>
                 </li>
                 <li>
