--- a/templates/scraper.html
+++ b/templates/scraper.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>Portfolio Details - Diabetes Predictor</title>
+    <title>Portfolio Details - Github Scraper</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
@@ -51,14 +51,14 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-8">
-              <h2 class="portfolio-title">Diabetes Predictor</h2>
+              <h2 class="portfolio-title">Github Scraper</h2>
 
               <div class="portfolio-details-slider swiper">
                 <div class="swiper-wrapper align-items-center">
                   <div>
                     <img
-                      src="../assets/img/portfolio/diabetes.png"
-                      alt="diabetes"
+                      src="../assets/img/portfolio/scraper.png"
+                      alt="Github Scraper"
                       class="img-fluid"
                     />
                   </div>
@@ -70,32 +70,32 @@
             <div class="col-lg-4 portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Classification</li>
-                <li><strong>Project date</strong>: 03 June, 2022</li>
+                <li><strong>Category</strong>: Experimental</li>
+                <li><strong>Project date</strong>: 15 November, 2022</li>
                 <li>
                   <strong>Project URL</strong>:
                   <a
-                    href="https://diabetesclassify.onrender.com/"
+                    href="https://prakashdeveloper03-github-scraper-app-6xsexk.streamlit.app/"
                     target="_blank"
                   >
-                    https://diabetesclassify.onrender.com/
+                    https://share.streamlit.io/
                   </a>
                 </li>
                 <li>
                   <strong>Source URL</strong>:
                   <a
-                    href="https://github.com/Prakashdeveloper03/Diabetes-Predictor"
+                    href="https://github.com/Prakashdeveloper03/Github-Scraper"
                     target="_blank"
                   >
-                    https://github.com/Prakashdeveloper03/Diabetes-Predictor
+                    https://github.com/Prakashdeveloper03/Github-Scraper
                   </a>
                 </li>
               </ul>
 
               <p>
-                Diabetes Predictor App used to predict whether a person has
-                diabetes or not based on certain input parameters created using
-                python's scikit-learn, fastapi, numpy and joblib packages.
+                Github scraper app is used to scrape public data for a specific
+                github user profile. You can download the scraped data in csv,
+                json and pandas profiling html report formats.
               </p>
             </div>
           </div>
