--- a/templates/spamfilter.html
+++ b/templates/spamfilter.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>Portfolio Details - Diabetes Predictor</title>
+    <title>Portfolio Details - Spam Classifier</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
@@ -51,15 +51,15 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-8">
-              <h2 class="portfolio-title">Diabetes Predictor</h2>
+              <h2 class="portfolio-title">Spam Classifier</h2>
 
               <div class="portfolio-details-slider swiper">
                 <div class="swiper-wrapper align-items-center">
                   <div>
                     <img
-                      src="../assets/img/portfolio/diabetes.png"
-                      alt="diabetes"
+                      src="../assets/img/portfolio/spamFilter.png"
                       class="img-fluid"
+                      alt="spam-filter"
                     />
                   </div>
                 </div>
@@ -71,31 +71,31 @@
               <h3>Project information</h3>
               <ul>
                 <li><strong>Category</strong>: Classification</li>
-                <li><strong>Project date</strong>: 03 June, 2022</li>
+                <li><strong>Project date</strong>: 10 Aug, 2022</li>
                 <li>
                   <strong>Project URL</strong>:
                   <a
-                    href="https://diabetesclassify.onrender.com/"
+                    href="https://spamclassifier-lae1.onrender.com/"
                     target="_blank"
                   >
-                    https://diabetesclassify.onrender.com/
+                    https://spamclassifier-lae1.onrender.com/
                   </a>
                 </li>
                 <li>
                   <strong>Source URL</strong>:
                   <a
-                    href="https://github.com/Prakashdeveloper03/Diabetes-Predictor"
+                    href="https://github.com/Prakashdeveloper03/SMS-Spam-Classifier"
                     target="_blank"
                   >
-                    https://github.com/Prakashdeveloper03/Diabetes-Predictor
+                    https://github.com/Prakashdeveloper03/SMS-Spam-Classifier
                   </a>
                 </li>
               </ul>
 
               <p>
-                Diabetes Predictor App used to predict whether a person has
-                diabetes or not based on certain input parameters created using
-                python's scikit-learn, fastapi, numpy and joblib packages.
+                SMS Spam Classifier app is used to predict if the given input
+                message is spam or not created using python's scikit-learn,
+                fastapi, pandas, nltk and joblib packages.
               </p>
             </div>
           </div>
