--- a/templates/rainfy.html
+++ b/templates/rainfy.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>Portfolio Details - QR Code Generator</title>
+    <title>Portfolio Details - Rainfy</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
@@ -51,15 +51,15 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-8">
-              <h2 class="portfolio-title">QR Code Generator</h2>
+              <h2 class="portfolio-title">Rainfy</h2>
 
               <div class="portfolio-details-slider swiper">
                 <div class="swiper-wrapper align-items-center">
                   <div>
                     <img
-                      src="../assets/img/portfolio/qrcode.png"
+                      src="../assets/img/portfolio/rainfy.png"
                       class="img-fluid"
-                      alt="qrcode"
+                      alt="pricefy"
                     />
                   </div>
                 </div>
@@ -70,32 +70,29 @@
             <div class="col-lg-4 portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: General</li>
-                <li><strong>Project date</strong>: 04 June, 2022</li>
+                <li><strong>Category</strong>: Classification</li>
+                <li><strong>Project date</strong>: 04 March, 2023</li>
                 <li>
                   <strong>Project URL</strong>:
-                  <a
-                    href="https://prakashdeveloper03.github.io/QR-Code-Generator/"
-                    target="_blank"
-                  >
-                    https://prakashdeveloper03.github.io/QR-Code-Generator/
+                  <a href="https://rainfy.onrender.com/" target="_blank">
+                    https://rainfy.onrender.com/
                   </a>
                 </li>
                 <li>
                   <strong>Source URL</strong>:
                   <a
-                    href="https://github.com/Prakashdeveloper03/QR-Code-Generator"
+                    href="https://github.com/Prakashdeveloper03/Pricefy"
                     target="_blank"
                   >
-                    https://github.com/Prakashdeveloper03/QR-Code-Generator
+                    https://github.com/Prakashdeveloper03/Rainfy
                   </a>
                 </li>
               </ul>
 
               <p>
-                QR Code Generator website is used to generate qr code images for
-                the given URL address. It was created using HTML5, CSS3,
-                JavaScript and qrserver API.
+                Rainfall Predictor App used to predict tomorrow's rainfall based
+                on certain input parameters created using python's scikit-learn,
+                fastapi, numpy and joblib packages.
               </p>
             </div>
           </div>
@@ -112,7 +109,6 @@
     <script src="../assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
     <script src="../assets/vendor/swiper/swiper-bundle.min.js"></script>
     <script src="../assets/vendor/waypoints/noframework.waypoints.js"></script>
-    <script src="../assets/vendor/php-email-form/validate.js"></script>
 
     <!-- Template Main JS File -->
     <script src="../assets/js/main.js"></script>
