Updated Portfolio & Resume Sections

--- a/templates/blazor.html
+++ b/templates/blazor.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>Portfolio Details - Landmark Recognition</title>
+    <title>Portfolio Details - Blazor QRCode</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
@@ -51,14 +51,14 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-8">
-              <h2 class="portfolio-title">Landmark Recognition</h2>
+              <h2 class="portfolio-title">Blazor QRCode</h2>
 
               <div class="portfolio-details-slider swiper">
                 <div class="swiper-wrapper align-items-center">
                   <div>
                     <img
-                      src="../assets/img/portfolio/landmark.png"
-                      alt="landmark"
+                      src="../assets/img/portfolio/blazor.png"
+                      alt="Blazor QRCode"
                       class="img-fluid"
                     />
                   </div>
@@ -71,31 +71,30 @@
               <h3>Project information</h3>
               <ul>
                 <li><strong>Category</strong>: Experimental</li>
-                <li><strong>Project date</strong>: 05 August, 2022</li>
+                <li><strong>Project date</strong>: 23 July, 2023</li>
                 <li>
                   <strong>Project URL</strong>:
                   <a
-                    href="https://prakashdeveloper03-landmark-recognition-app-ewyk4h.streamlitapp.com/"
+                    href="https://qrcodeblazor.azurewebsites.net/"
                     target="_blank"
                   >
-                    https://share.streamlit.io/
+                    https://qrcodeblazor.azurewebsites.net/
                   </a>
                 </li>
                 <li>
                   <strong>Source URL</strong>:
                   <a
-                    href="https://github.com/Prakashdeveloper03/Landmark-Recognition"
+                    href="https://github.com/Prakashdeveloper03/BlazorQR"
                     target="_blank"
                   >
-                    https://github.com/Prakashdeveloper03/Landmark-Recognition
+                    https://github.com/Prakashdeveloper03/BlazorQR
                   </a>
                 </li>
               </ul>
 
               <p>
-                Landmark Recognition App is used to predict landmark from user
-                given image. it gives information about lankmark's full address,
-                latitude & longitude and plot the predicted landmark on the map.
+                This is a simple QR code generator app built with Blazor. It
+                allows you to generate QR codes for any text or URL.
               </p>
             </div>
           </div>
