--- a/templates/todo.html
+++ b/templates/todo.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>Portfolio Details - Landmark Recognition</title>
+    <title>Portfolio Details - Todo Application</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
@@ -51,14 +51,14 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-8">
-              <h2 class="portfolio-title">Landmark Recognition</h2>
+              <h2 class="portfolio-title">Todo Application</h2>
 
               <div class="portfolio-details-slider swiper">
                 <div class="swiper-wrapper align-items-center">
                   <div>
                     <img
-                      src="../assets/img/portfolio/landmark.png"
-                      alt="landmark"
+                      src="../assets/img/portfolio/todo.png"
+                      alt="Todo Application"
                       class="img-fluid"
                     />
                   </div>
@@ -71,31 +71,30 @@
               <h3>Project information</h3>
               <ul>
                 <li><strong>Category</strong>: Experimental</li>
-                <li><strong>Project date</strong>: 05 August, 2022</li>
+                <li><strong>Project date</strong>: 15 March, 2023</li>
                 <li>
                   <strong>Project URL</strong>:
                   <a
-                    href="https://prakashdeveloper03-landmark-recognition-app-ewyk4h.streamlitapp.com/"
+                    href="https://fiber-todo-app.onrender.com/"
                     target="_blank"
                   >
-                    https://share.streamlit.io/
+                    https://fiber-todo-app.onrender.com/
                   </a>
                 </li>
                 <li>
                   <strong>Source URL</strong>:
                   <a
-                    href="https://github.com/Prakashdeveloper03/Landmark-Recognition"
+                    href="https://github.com/Prakashdeveloper03/Fiber-todo-app"
                     target="_blank"
                   >
-                    https://github.com/Prakashdeveloper03/Landmark-Recognition
+                    https://github.com/Prakashdeveloper03/Fiber-todo-app
                   </a>
                 </li>
               </ul>
 
               <p>
-                Landmark Recognition App is used to predict landmark from user
-                given image. it gives information about lankmark's full address,
-                latitude & longitude and plot the predicted landmark on the map.
+                Tasks todo web application with a minimal features created using
+                fiber framework.
               </p>
             </div>
           </div>
